--- a/VideoPlatformBackend/src/main/resources/application.properties
+++ b/VideoPlatformBackend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 server.port : 5000
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=false
 user: admin
