--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,9 +10,9 @@ COPY . .
 RUN npm install --location=global npm
 
 # Build OpenVidu Call frontend
-RUN rm mcarbonPortal/package-lock.json && \
+# RUN rm mcarbonPortal/package-lock.json && \
     # Install frontend dependencies and build it for production
-    cd mcarbonPortal && npm install && \
+RUN cd mcarbonPortal && npm install && \
     npm run prod:build-java ${BASE_HREF} && \
     cd ../ && rm -rf mcarbonPortal
 
