--- a/mcarbonPortal/package.json
+++ b/mcarbonPortal/package.json
@@ -9,6 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "prod:build-java": "func() { ./node_modules/@angular/cli/bin/ng.js build --output-path ../VideoPlatformBackend/src/main/resources/static/ --configuration production --base-href=\"${1:-/}\"; }; func",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && ng serve -o"
   },
   "engines": {
