--- a/VideoPlatformBackend/src/main/resources/application.properties
+++ b/VideoPlatformBackend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://172.17.0.122:5432/videoplatform
+spring.datasource.url=jdbc:postgresql://localhost:5432/videoplatform
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 server.port : 5000
@@ -17,7 +17,7 @@ access.time=24
 
 call.access.time=2
 
-sms.url=https://kapi.omni-channel.in/fe/api/v1/send?username=vijayk.trans&password=rxzvP&unicode=false&from=DEVICE&dltContentId=1707168145040191687&dltPrincipalEntityId=1701158271876955477&to={0}&text={1}
+sms.url=https://10.89.4.94:18551/fe/api/v1/send?username=vijayk.trans&password=rxzvP&unicode=false&from=DEVICE&dltContentId=1707168145040191687&dltPrincipalEntityId=1701158271876955477&to={0}&text={1}
 sms.text=Hi, You have a video call invite, to join click {0} Devicebook
 
 call.prefix=https://demo2.progate.mobi/#/call/
