--- a/openvidu-call/openvidu-call-back-java/pom.xml
+++ b/openvidu-call/openvidu-call-back-java/pom.xml
@@ -44,11 +44,11 @@
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-commons</artifactId>
         </dependency>
-    <dependency>
-      <groupId>mcarbon-gr</groupId>
-      <artifactId>gr-api</artifactId>
-      <version>1.5.11</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>mcarbon-gr</groupId>-->
+<!--      <artifactId>gr-api</artifactId>-->
+<!--      <version>1.5.11</version>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>io.github.resilience4j</groupId>
       <artifactId>resilience4j-retry</artifactId>
