--- a/openvidu-call/openvidu-call-back-java/src/main/resources/application.properties
+++ b/openvidu-call/openvidu-call-back-java/src/main/resources/application.properties
@@ -15,5 +15,5 @@ CALL_RECORDING: ENABLED
 CALL_BROADCAST: ENABLED
 CALL_ADMIN_SECRET: MY_SECRET
 TIMER_TASK_INTERVAL:1
-ACCOUNT_AUTH:AC0020qOkO9gvJp
-USER_AUTH:UR002vbqpkwsJRb
+ACCOUNT_AUTH:AC051vwuGeoU75L
+USER_AUTH:UR051ooZwrrN9gJ
