--- a/VideoPlatformBackend/src/main/resources/application.properties
+++ b/VideoPlatformBackend/src/main/resources/application.properties
@@ -20,10 +20,12 @@ call.access.time=2
 sms.url=https://10.89.4.94:18551/fe/api/v1/send?username=vijayk.trans&password=rxzvP&unicode=false&from=DEVICE&dltContentId=1707168145040191687&dltPrincipalEntityId=1701158271876955477&to={0}&text={1}
 sms.text=Hi, You have a video call invite, to join click {0} Devicebook
 
-call.prefix=https://demo2.progate.mobi/#/call/
+call.prefix=https://demo2.progate.mobi/#/
 
 WA_URL:https://api.pinbot.ai/v1/wamessage/sendMessage
 WA_API_KEY:d29a6fd8-a219-11ed-a7c7-9606c7e32d76
 
 gcp.firebase.service-account=classpath:google-services.json
 firebase.collection=userdata
+
+spring.logging.path=/home/acctdev/javatest
