--- a/openvidu-call/openvidu-call-front/angular.json
+++ b/openvidu-call/openvidu-call-front/angular.json
@@ -149,6 +149,37 @@
 				}
 			}
 		},
+		"openvidu-angular": {
+			"projectType": "library",
+			"root": "projects/openvidu-angular",
+			"sourceRoot": "projects/openvidu-angular/src",
+			"prefix": "ov",
+			"architect": {
+				"build": {
+					"builder": "@angular-devkit/build-angular:ng-packagr",
+					"options": {
+						"project": "projects/openvidu-angular/ng-package.json"
+					},
+					"configurations": {
+						"production": {
+							"tsConfig": "projects/openvidu-angular/tsconfig.lib.prod.json"
+						},
+						"development": {
+							"tsConfig": "projects/openvidu-angular/tsconfig.lib.json"
+						}
+					},
+					"defaultConfiguration": "production"
+				},
+				"test": {
+					"builder": "@angular-devkit/build-angular:karma",
+					"options": {
+						"main": "projects/openvidu-angular/src/test.ts",
+						"tsConfig": "projects/openvidu-angular/tsconfig.spec.json",
+						"karmaConfig": "projects/openvidu-angular/karma.conf.js"
+					}
+				}
+			}
+		},
 		"openvidu-call-e2e": {
 			"root": "e2e/",
 			"projectType": "application",
