--- a/openvidu-call/openvidu-call-front/package.json
+++ b/openvidu-call/openvidu-call-front/package.json
@@ -39,6 +39,7 @@
   "private": true,
   "scripts": {
     "dev:start": "ng serve --configuration development",
+    "lib:build": "ng build openvidu-angular --configuration production && cd ./dist/openvidu-angular && npm pack",
     "dev:build": "./node_modules/@angular/cli/bin/ng.js build --output-path ../openvidu-call-back/public/",
     "prod:build": "func() { ./node_modules/@angular/cli/bin/ng.js build --output-path ../openvidu-call-back/dist/public/ --configuration production --base-href=\"${1:-/}\"; }; func",
     "dev:build-java": "./node_modules/@angular/cli/bin/ng.js build --output-path ../openvidu-call-back-java/src/main/resources/static/",
