--- a/openvidu-call/openvidu-call-front/package.json
+++ b/openvidu-call/openvidu-call-front/package.json
@@ -33,6 +33,7 @@
     "ts-node": "10.9.1",
     "tslib": "2.4.0",
     "tslint": "6.1.3",
+    "openvidu-browser": "2.27.0",
     "typescript": "4.8.4"
   },
   "name": "openvidu-call",
