--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-# Build OpenVidu Call for production
+# Build videoplatform for production
 FROM node:lts-alpine3.16 as video-platform-build
 
 WORKDIR /
@@ -6,15 +6,6 @@ WORKDIR /
 ARG BASE_HREF=/
 
 COPY . .
-
-RUN npm install --location=global npm
-
-# Build OpenVidu Call frontend
-# RUN rm mcarbonPortal/package-lock.json && \
-    # Install frontend dependencies and build it for production
-RUN cd mcarbonPortal && npm install --force && \
-    npm run prod:build-java ${BASE_HREF} && \
-    cd ../ && rm -rf mcarbonPortal
 
 FROM maven
 
