--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,7 +15,7 @@ COPY --from=video-platform-build /VideoPlatformBackend .
 
 # Install backend dependencies and build it for production
 RUN mvn clean install package
-mv  target/*.jar target/openvidu_db-backend.jar
+RUN mv  target/*.jar target/openvidu_db-backend.jar
 # Entrypoint
 COPY ./java-entrypoint.sh /usr/local/bin/entrypoint.sh
 RUN cat /usr/local/bin/entrypoint.sh
