--- a/docker/CustomerNginx.conf
+++ b/docker/CustomerNginx.conf
@@ -7,11 +7,11 @@ http {
         root /usr/share/nginx/html;
         index index.html;        
         location /customer {
-            alias /usr/share/nginx/html/customer
+            alias /usr/share/nginx/html/customer;
             try_files $uri $uri/ /index.html;
         }
         location /axisdemo {
-            alias /usr/share/nginx/html/axisdemo
+            alias /usr/share/nginx/html/axisdemo;
             try_files $uri $uri/ /index.html;
         }
     }
