--- a/docker/CustomerNginx.conf
+++ b/docker/CustomerNginx.conf
@@ -7,11 +7,13 @@ http {
         root /usr/share/nginx/html;
         index index.html;        
         location /customer {
-            alias /usr/share/nginx/html/customer;
+            default_type application/json;
+            alias /usr/share/nginx/html/customer/m-carbon-customer-suppot-portal;
             try_files $uri $uri/ /index.html;
         }
         location /axisdemo {
-            alias /usr/share/nginx/html/axisdemo;
+            default_type application/json;
+            alias /usr/share/nginx/html/axisdemo/ab_demo;
             try_files $uri $uri/ /index.html;
         }
     }
