--- a/docker/CustomerNginx.conf
+++ b/docker/CustomerNginx.conf
@@ -6,14 +6,7 @@ http {
         server_name localhost;
         root /usr/share/nginx/html;
         index index.html;        
-        location /customer {
-            default_type application/json;
-            alias /usr/share/nginx/html/customer/m-carbon-customer-suppot-portal;
-            try_files $uri $uri/ /index.html;
-        }
-        location /axisdemo {
-            default_type application/json;
-            alias /usr/share/nginx/html/axisdemo/ab_demo;
+        location / {
             try_files $uri $uri/ /index.html;
         }
     }
