Nginx docker file

--- a/openvidu-proxy/default_nginx_conf/global/app_config.conf
+++ b/openvidu-proxy/default_nginx_conf/global/app_config.conf
@@ -11,3 +11,6 @@
     location /axisdemo {
         proxy_pass http://axisfrontendapp; # Openvidu call by default
     }
+    location /customer{
+        proxy_pass http://axisfrontendapp; # Openvidu call by default
+    }
