--- a/docker/CustomerNginx.conf
+++ b/docker/CustomerNginx.conf
@@ -6,7 +6,10 @@ http {
         server_name localhost;
         root /usr/share/nginx/html;
         index index.html;        
-        location / {
+        location /axisdemo {
+            try_files $uri $uri/ /index.html;
+        }
+        location /customer {
             try_files $uri $uri/ /index.html;
         }
     }
