Nginx docker file

--- a/docker/CustomerNginx.conf
+++ b/docker/CustomerNginx.conf
@@ -6,11 +6,9 @@ http {
         server_name localhost;
         root /usr/share/nginx/html;
         index index.html;        
-        location /axisdemo {
+        location / {
             try_files $uri $uri/ /index.html;
         }
-        location /customer {
-            try_files $uri $uri/ /index.html;
-        }
+        
     }
 }
