Adding nginx conf for dev

--- a/openvidu-proxy/default_nginx_conf/ce/default.conf
+++ b/openvidu-proxy/default_nginx_conf/ce/default.conf
@@ -2,6 +2,8 @@
 
 {app_upstream}
 
+{dev_app_upstream}
+
 server {
     listen {http_port};
     listen [::]:{http_port};
@@ -51,6 +53,38 @@ server {
         root /var/www/certbot;
         try_files $uri $uri/ =404;
     }
+    
+
+    {custom_locations}
+}
+server {
+    listen {https_port} ssl;
+    listen [::]:{https_port} ssl;
+    server_name {dev_domain_name};
+
+    {ssl_config}
+
+    {proxy_config}
+
+    {dev_app_config}
+
+    ########################
+    # OpenVidu Locations   #
+    ########################
+    {dev_common_api_ce}
+
+    {dev_deprecated_api_ce}
+
+    {dev_new_api_ce}
+
+    #################################
+    # LetsEncrypt                   #
+    #################################
+    location /.well-known/acme-challenge {
+        root /var/www/certbot;
+        try_files $uri $uri/ =404;
+    }
+    
 
     {custom_locations}
 }
