--- a/openvidu-proxy/default_nginx_conf/global/dev_app_upstream.conf
+++ b/openvidu-proxy/default_nginx_conf/global/dev_app_upstream.conf
@@ -1,16 +1,16 @@
 # Your App
 upstream devyourapp {
-    server localhost:5442;
+    server demo2.progate.mobi:5442;
 }
 upstream devopenviduserver {
-    server localhost:5443;
+    server demo2.progate.mobi:5443;
 }
 upstream devvpbackendapp {
-    server localhost:5444;
+    server demo2.progate.mobi:5444;
 }
 upstream devvpfrontendapp {
-    server localhost:4200;
+    server demo2.progate.mobi:4200;
 }
 upstream devaxisfrontendapp {
-    server localhost:4201;
+    server demo2.progate.mobi:4201;
 }
