--- a/mcarbonPortal/tsconfig.json
+++ b/mcarbonPortal/tsconfig.json
@@ -9,13 +9,9 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "resolveJsonModule": true,
     "target": "es2020",
-    "lib": [
-      "es2020",
-      "dom"
-    ],
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "lib": ["es2020", "dom"],
+    "typeRoots": ["node_modules/@types"]
   }
 }
