--- a/VideoPlatformBackend/pom.xml
+++ b/VideoPlatformBackend/pom.xml
@@ -86,6 +86,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+        <version>2.7.10</version>
 				<configuration>
 					<excludes>
 						<exclude>
@@ -93,7 +94,15 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+          <mainClass>com.VideoPlatform.VideoPlatformApplication</mainClass>
 				</configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
