Webhook and callback class remove

--- a/openvidu-call/openvidu-call-back-java/src/main/resources/application.properties
+++ b/openvidu-call/openvidu-call-back-java/src/main/resources/application.properties
@@ -17,3 +17,5 @@ CALL_ADMIN_SECRET: MY_SECRET
 TIMER_TASK_INTERVAL:1
 Authorization:AC051vwuGeoU75L
 Token:UR051ooZwrrN9gJ
+LOGO_FILE_PATH:assets/images/
+LOGO_FILE_EXT:.png
