--- a/openvidu-call/openvidu-call-back-java/pom.xml
+++ b/openvidu-call/openvidu-call-back-java/pom.xml
@@ -66,6 +66,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+        <version>2.7.10</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
 			</plugin>
 		</plugins>
 		<finalName>openvidu-call-back-java</finalName>
