repo method call removed from controller

--- a/VideoPlatformBackend/src/main/resources/application.properties
+++ b/VideoPlatformBackend/src/main/resources/application.properties
@@ -14,9 +14,7 @@ password: admin
 
 secret.key="secret"
 access.time=24
-
-call.access.time=2
-support.suffix=_1
+link.access.time=1800000
 
 sms.url=https://10.89.4.94:18551/fe/api/v1/send?username=vijayk.trans&password=rxzvP&unicode=false&from=DEVICE&dltContentId=1707168145040191687&dltPrincipalEntityId=1701158271876955477&to={0}&text={1}
 sms.text=Hi, You have a video call invite, to join click {0} Devicebook
