sessions path added in nginx

--- a/openvidu-proxy/default_nginx_conf/global/dev_app_config.conf
+++ b/openvidu-proxy/default_nginx_conf/global/dev_app_config.conf
@@ -1,4 +1,7 @@
     # Your App
+    location  /sessions {
+        proxy_pass http://devyourapp; # Openvidu call by default
+    }
     location  ~/session/(.*) {
         proxy_pass http://devyourapp/$1; # Openvidu call by default
     }
