Floating Layout support and removing session from href

--- a/openvidu-call/openvidu-call-back-java/src/main/resources/application.properties
+++ b/openvidu-call/openvidu-call-back-java/src/main/resources/application.properties
@@ -15,7 +15,7 @@ CALL_RECORDING: ENABLED
 CALL_BROADCAST: ENABLED
 CALL_ADMIN_SECRET: MY_SECRET
 TIMER_TASK_INTERVAL:1
-Authorization:AC051vwuGeoU75L
-Token:UR051ooZwrrN9gJ
+Authorization:AC001CBoh3eACy9
+Token:UR751qOolQi7gW3
 LOGO_FILE_PATH:assets/images/
 LOGO_FILE_EXT:.png
