docker changes for apk

--- a/docker/PortalNginx.conf
+++ b/docker/PortalNginx.conf
@@ -7,6 +7,9 @@ http {
         root /usr/share/nginx/html;
         index index.html;        
         location / {
+            default_type application/vnd.android.package-archive;
+            add_header Content-Type application/vnd.android.package-archive;
+            add_header Content-Disposition "attachment";
             try_files $uri $uri/ /index.html;
         }
     }
