Docker file changes

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,6 +10,7 @@ COPY . .
 FROM maven
 
 WORKDIR /opt/videoplatform
+RUN mkdir /videoplatform/assets/prerecorded
 
 COPY --from=video-platform-build /VideoPlatformBackend .
 
