--- a/openvidu-call/openvidu-call-back-java/src/main/resources/application.properties
+++ b/openvidu-call/openvidu-call-back-java/src/main/resources/application.properties
@@ -19,3 +19,13 @@ Authorization:AC001CBoh3eACy9
 Token:UR751qOolQi7gW3
 LOGO_FILE_PATH:assets/images/
 LOGO_FILE_EXT:.png
+file.upload-dir:/opt/openvidu/kurento-logs/prerecorded/
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
