--- a/openvidu-call/openvidu-call-front/package.json
+++ b/openvidu-call/openvidu-call-front/package.json
@@ -12,6 +12,7 @@
     "@angular/router": "14.2.8",
     "core-js": "^3.26.0",
     "file-saver": "^2.0.5",
+    "howler": "^2.2.3",
     "rxjs": "7.5.7",
     "unique-names-generator": "^4.7.1",
     "zone.js": "0.11.8"
