nginx kibana config

--- a/openvidu-proxy/default_nginx_conf/pro/default.conf
+++ b/openvidu-proxy/default_nginx_conf/pro/default.conf
@@ -6,11 +6,11 @@ add_header X-XSS-Protection "1; mode=block";
 {app_upstream}
 
 upstream kibana {
-    server localhost:5601;
+    server sparkm:5601;
 }
 
 upstream elasticsearch {
-    server localhost:9200;
+    server sparkm:9200;
 }
 
 upstream openviduserver {
