--- a/seleniumJava-master/pom.xml
+++ b/seleniumJava-master/pom.xml
@@ -110,7 +110,21 @@
       <version>2.1.4</version>
       <type>pom</type>
     </dependency>
-
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>2.14.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.10.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.paulhammant</groupId>
+      <artifactId>ngwebdriver</artifactId>
+      <version>1.0</version>
+    </dependency>
 
 
   </dependencies>
