--- a/seleniumJava-master/pom.xml
+++ b/seleniumJava-master/pom.xml
@@ -125,7 +125,11 @@
       <artifactId>ngwebdriver</artifactId>
       <version>1.0</version>
     </dependency>
-
+      <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpclient</artifactId>
+        <version>4.5.13</version>
+      </dependency>
 
   </dependencies>
 
@@ -136,8 +140,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>8</source>
+          <target>8</target>
         </configuration>
       </plugin>
       <plugin>
