Prerecoreded code refactor

--- a/openvidu-call/openvidu-call-back-java/src/main/resources/application.properties
+++ b/openvidu-call/openvidu-call-back-java/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.mvc.converters.preferred-json-mapper=gson
 server.port: 5006
 server.ssl.enabled: false
 
-OPENVIDU_URL: https://demo2.progate.mobi
-VIDEOPLATFORM_URL: http://10.200.208.71:5444
+OPENVIDU_URL: https://video.progate.mobi
+VIDEOPLATFORM_URL: http://localhost:5000
 OPENVIDU_SECRET: MY_SECRET
 
 CALL_OPENVIDU_CERTTYPE: selfsigned
@@ -17,9 +17,7 @@ CALL_ADMIN_SECRET: MY_SECRET
 TIMER_TASK_INTERVAL:1
 Authorization:AC001CBoh3eACy9
 Token:UR751qOolQi7gW3
-LOGO_FILE_PATH:assets/images/
-LOGO_FILE_EXT:.png
-file.upload-dir:/opt/openvidu/kurento-logs/prerecorded/
+file.upload-dir:/data/prerecorded/
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
