--- a/VideoPlatformBackend/src/main/resources/application.properties
+++ b/VideoPlatformBackend/src/main/resources/application.properties
@@ -21,7 +21,7 @@ sms.text=Hi, You have a video call invite, to join click {0} Devicebook
 
 call.prefix=https://demo2.progate.mobi/#/
 
-file.path = /home/Vatsala.Vats/vid-content/
+file.path = /home/Vatsala.Vats/vid-content/data/prerecorded
 
 WA_URL:https://api.pinbot.ai/v1/wamessage/sendMessage
 WA_API_KEY:d29a6fd8-a219-11ed-a7c7-9606c7e32d76
