java entrypoint changes

--- a/openvidu-call/openvidu-call-back-java/src/main/resources/application.properties
+++ b/openvidu-call/openvidu-call-back-java/src/main/resources/application.properties
@@ -17,7 +17,7 @@ CALL_ADMIN_SECRET: MY_SECRET
 TIMER_TASK_INTERVAL:1
 Authorization:AC001CBoh3eACy9
 Token:UR751qOolQi7gW3
-file.upload-dir:/data/prerecorded/
+file.fileDir:/data/prerecorded/
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
