--- a/mediaNodeController/docker/Dockerfile
+++ b/mediaNodeController/docker/Dockerfile
@@ -28,7 +28,7 @@ RUN apk add --update docker openrc \
 COPY . .
 
 COPY --from=development /usr/src/app/dist ./dist
-
+RUN ls -ltrh
 RUN chmod +x docker/entrypoint.sh \
     && mv docker/entrypoint.sh /usr/local/bin/entrypoint.sh
 
