--- a/VideoPlatformBackend/pom.xml
+++ b/VideoPlatformBackend/pom.xml
@@ -77,6 +77,11 @@
 			<artifactId>openvidu-java-client</artifactId>
 			<version>2.24.0</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.11.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
